--- a/src/public/scss/partials/_modals.scss
+++ b/src/public/scss/partials/_modals.scss
@@ -24,37 +24,64 @@
 }
 
 
+// .offCanvasModal-container {
+//     position: fixed; 
+//     overflow: hidden;  
+// }
+
 
 .offCanvasModal {
     @extend %dropshadow--topLayer; 
     @extend %transitionForOffCanvas;
     @extend %pt4;
     @include translateX(100vw);
-    position: fixed;
-    width: 90%; /* Default */
-    top: 0;
+    top: 0; 
+    z-index: 100; 
+    bottom: 0;
+    position: fixed; 
     background-color: #fff;
-    z-index: 5; 
     height: 100%; 
+    overflow: hidden; 
     overflow-y: scroll; 
-    margin-top: rem-calc(50); /*Height of top-bar on small/medium*/
+    -webkit-overflow-scrolling: touch;
+    -moz-overflow-scrolling: touch; 
+    width: 90%;
 
     @media #{$medium-up} {
         width: 50%;     
     }
 
     @media #{$large-up} {
+        z-index: 5; 
         margin-top: rem-calc(60); /*Height of top-bar on large*/
         width: 44%; 
     }
 }
+
+
+.offCanvasModal-content {
+    // position: absolute; 
+    // height: 100%;
+    // bottom: 0; 
+    // top: 0; 
+    // overflow: hidden; 
+    // overflow-y: scroll; 
+    // -webkit-overflow-scrolling: touch;
+    // -moz-overflow-scrolling: touch; 
+
+    // z-index: 5; 
+    // height: 100%;
+    // width: 100%;
+
+}
+
 
 .offCanvasModal-container.right {
     
     .offCanvasModal {
         @include translateX(100vw);   
         right: 0; 
-        &.showing {
+        &.is-showing {
         
         @include translateX(0);
         right: 0;
